@@ -1,6 +1,3 @@
-# Tower-Defense
-Edit Configuration for testfx
+# Tower-Defense 
 
--ea --add-modules=javafx.graphics --add-reads javafx.graphics=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED 
-
-![Welcome Screen](https://github.gatech.edu/pmittal43/Tower-Defense/blob/master/src/main/resources/images/forest.png?raw=true)
+[![Watch the video](https://i.imgur.com/vKb2F1B.png)](https://youtu.be/z1kB3yur11A)
